separate online and offline with bug

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <table class="table">
       <thead><tr>
-        <td class="active" colspan='1'>All</td>
-        <td colspan='1'>Online</td>
-        <td colspan='1'>Offline</td>
-        <td class="search" colspan='6s'><input type="text" /></td>
+        <th colspan ='2' class='all active'>All</th>
+        <th colspan ='2' class='on'>Online</th>
+        <th colspan ='2' class='off'>Offline</th>
+        <th class="search" colspan ='6'><input type="text" placeholder="Search"/></th>
       </tr></thead>
-      <tbody>
+      <tbody class='tw'>
 
       </tbody>
     </table>
