search using list.js working with little bug

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
         <p class='btn active off'>offline</p>
       </div>
 
-      <div style="float: right">
-        <input class="search" placeholder="Search" />
-      </div>
+        <input class="search" placeholder="Search Users" style="float: right"/>
+
       <br /><br /><br />
       <table>
         <tbody class='list'>
+          <tr>
+            <td class='name'>
+            </td>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
